syntax = "proto3";
package matchGrpc;

option go_package = ".;dgsGrpc";

service RoomService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
  rpc GetRoomList(GetRoomListRequest) returns (GetRoomListResponse) {}
}

message CreateRoomRequest {}

message CreateRoomResponse {
  int64 roomId = 1;
}

message GetRoomListRequest {}

message GetRoomListResponse {
  repeated RoomMsg roomList = 1;
}

message RoomMsg{
  int64 id = 1;
  int32 status = 2;
  int64 createTime = 3;
  int32 playerCount = 4;
  int32 highestScore = 5;
}